--- a/public/locales/en/credit.json
+++ b/public/locales/en/credit.json
@@ -8,7 +8,7 @@
   },
   "external_tips": {
     "title": "How to use credits in external wallet?",
-    "description": "1. Participating in QnA3 official activities can earn credits, and may receive airdrops in the future.\n2. Transferring from custodian wallet to external wallet will be supported soon."
+    "description": "1. Participating in QnA3 official activities can earn credits."
   },
   "claim": "Claim",
   "credits": "credits",
