--- a/public/locales/en/vote.json
+++ b/public/locales/en/vote.json
@@ -1,7 +1,7 @@
 {
   "title": "Vote for your favorite question!",
   "description": "The supporters of the top 3 questions will share the credits pool.",
-  "rules": "1. The ranked questions are the top 10 most popular questions from last week.\n2. You can vote for all the questions you like. You can vote multiple times for a single question. Each vote costs 5 credits from your external wallet.\n3. The voting deadline is fixed weekly. After the deadline, the voters of the 1st question can share 10,000 credits equally, the voters of the 2nd question can share 5,000 credits, and the voters of the 3rd question can share 1,000 credits.",
+  "rules": "<li>1. The ranked questions are the top 10 most popular questions from last week.</li><li>2. You can vote for all the questions you like. You can vote multiple times for a single question. Each vote costs 5 credits from your <strong class='text-indigo-400'>external wallet</strong>.</li><li>3. The voting deadline is fixed weekly. After the deadline, the voters of the 1st question can share 10,000 credits equally, the voters of the 2nd question can share 5,000 credits, and the voters of the 3rd question can share 1,000 credits.</li>",
   "rules_title": "Voting Rules",
   "vote": "Vote",
   "voteSuccess": "Vote successfully! External Wallet -5 Credits.",
