--- a/public/locales/en/model.json
+++ b/public/locales/en/model.json
@@ -2,13 +2,13 @@
   "configuration": "Configuration",
   "model": "Model",
   "token": {
-    "label": "Max Token",
-    "description": "The maximum number of tokens to generate in the chat completion. The total length of input tokens and generated tokens is limited by the model's context length."
+    "label": "Max Generation Tokens",
+    "description": "Maximum number of tokens to generate by the LLM in the chat completion. This does not include \"input\" tokens from your current Prompt and previous Conversation Context messages. Only the model's context length is limiting the total size of its processed input. Be careful, restart chats often. Compute costs ramp up quikly with extended conversations!"
   },
   "default": "Default",
   "temperature": {
     "label": "Temperature",
-    "description": "What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or top p but not both. (Default: 1)"
+    "description": "What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more variable and explorative, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or top p but not both."
   },
   "presencePenalty": {
     "label": "Presence Penalty",
@@ -16,7 +16,7 @@
   },
   "topP": {
     "label": "Top-p",
-    "description": "Number between 0 and 1. An alternative to sampling with temperature, called nucleus sampling, where the model considers the results of the tokens with top p probability mass. So 0.1 means only the tokens comprising the top 10% probability mass are considered. We generally recommend altering this or temperature but not both. (Default: 1)"
+    "description": "Number between 0 and 1. An alternative to sampling with temperature, called nucleus sampling, where the model considers the results of the tokens with top p probability mass. So 0.1 means only the tokens in the top 10% probability mass are considered."
   },
   "frequencyPenalty": {
     "label": "Frequency Penalty",
